[package]
name = "udpong"
version = "0.1.0"
edition = "2021"
description = """
udping is a tool for monitoring and logging UDP flow quality

It provides a client and server to identify and log inconsistencies
in UDP traffic, such as connection losses or out-of-order packets."""

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
time = "0.3.36"
rand = "0.9.0-alpha.2"
chrono = "0.4.38"
sha2 = "0.10.8"
hmac = "0.12.1"
libc = "0.2.162"
